# swbf2-image-tools

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: build-windows-release.yml
SWBF2ImageTools/: __init__.py  app.py
SWBF2ImageTools/conversions/: base.py  csnam_to_cnorm.py  registry.py
SWBF2ImageTools/core/: image_io.py  worker.py
SWBF2ImageTools/models/: config.py
SWBF2ImageTools/ui/: drop_list.py  global_settings.py  main_window.py
